# wavehax

./: .gitignore  pyproject.toml  test_pcph.py
egs/jvs/data/list/: all.list  dev.list  train_no_dev.list
egs/jvs/data/scp/: all.scp  dev.scp  eval_high.scp  eval_low.scp  eval_mid.scp  train_no_dev.scp
egs/jvs/data/stats/: train_no_dev.joblib
egs/jvs/logs/: config.yaml
wavehax/discriminators/: __init__.py  mssbcqtd.py  univnet.py
wavehax/modules/: periodic.py
